feat(fix-deps-3): HIGH CVE: Bump cryptography from 42.0.8 to >=44.0.2 in pyproject.toml. This fixes CVE-2024-12797 (RSA-PSS padding oracle) and covers all other CVEs in the 43.x/44.x range. The project is currently 4 major versions behind 46.x. Steps: (1) Read pyproject.toml to find the cryptography constraint. (2) Edit pyproject.toml to change cryptography version to '>=44.0.2,<47'. (3) Run 'poetry lock --no-update && poetry install'. If python-jose conflicts, try '>=44.0.2'. (4) Run 'poetry run pytest tests/ -x -q --tb=short'. Test Fernet operations (domain settings) and JWT signing — if tests touch those code paths they will validate correctness. (5) Run 'poetry run ruff check app/' before committing. Commit and push.
Automated by Seabone (codex + gpt-5.3-codex)

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,7 +30,7 @@ python-jose = {version = "3.3.0", extras = ["cryptography"]}
 passlib = {version = "1.7.4", extras = ["bcrypt"]}
 bcrypt = "4.0.1"
 pyotp = "2.9.0"
-cryptography = "42.0.8"
+cryptography = ">=44.0.2,<47"
 paramiko = "^3.4.0"
 python-multipart = "^0.0.22"
 
