--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ package-mode = false
 
 [tool.poetry.dependencies]
 python = ">=3.11,<3.13"
-fastapi = "0.110.3"
+fastapi = ">=0.115.0,<0.116"
 uvicorn = {version = "0.30.1", extras = ["standard"]}
 sqlalchemy = "2.0.31"
 psycopg = {version = "3.1.19", extras = ["binary"]}
